--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   "engines": {
     "node": ">=8.9.0"
   },
-  "main": "src/index.js",
-  "files": [
-    "src"
-  ],
+    "scripts": {
+        "start": "node server.js",
+        "dev": "nodemon server.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
   "prettier": {
     "printWidth": 200
   }
